fix(form elements page): bootstrap select z-index

--- a/src/app/form/elements/elements.style.scss
+++ b/src/app/form/elements/elements.style.scss
@@ -19,6 +19,9 @@
 }
 
 .bootstrap-select {
+  &.btn-group.open {
+    z-index: 5;
+  }
   .btn.dropdown-toggle {
     padding-left: 10px;
     box-sizing: border-box;
